--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,9 +5,14 @@
     box-sizing: border-box;
 }
 
+
+h1, h2{
+    text-transform: uppercase;
+}
+
 body{
     background-color: white;
-    color: black;
+    color: #333;
     font-family: 'Montserrat', sans-serif;      /* Codigo importado desde fonts-google */
 
 }
@@ -23,10 +28,10 @@ ul{
 }
 
 /* ---------------------- */
-.container{
+/* .container{
     width: 100%;
     margin: 0;
-}
+} */
 
 
 /*------------------------------------------*/
@@ -73,5 +78,79 @@ ul{
     display: none;                      /* menu esta escondido, solo se vera cuando el width sea pequeño */
   }
 
-/*------------------NAVBAR------------------*/
-/*------------------------------------------*/
+
+/*--------------------------------------------*/
+/*------------------ABOUT US------------------*/
+.about-us{
+    width: 100%;
+    height: 480px;
+    background-image: url('/assets/images/casa-o-departamento.jpg');
+    display: flex;
+    align-items: center;
+    padding-left: 6%;
+    padding-right: 50%;
+}
+
+.about-us h2{
+    font-size: 18px;
+    /* text-transform: uppercase; */
+    letter-spacing: 4px;
+    color: #0d3274;
+    background: rgba(255, 255, 255, 0.70) ; 
+    padding: 2px;
+    display: inline;
+
+}
+
+/*--------------------------------------------*/
+/*------------------SHOWCASE------------------*/
+/*-------------------PART 1-------------------*/
+.small-showcase{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4%;
+}
+
+.small-showcase-img{
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    border-radius: 10px;
+    padding: 16px;
+    align-items: center;
+}
+
+.small-showcase img{
+    width: 100%;
+}
+
+.more-about h1{
+    font-size: 48px;
+    text-align: center;
+    color: #0d3274;
+    margin: 20px 0;
+}
+.more-about p {
+    text-align: center;
+    margin: 30px 0;
+}
+
+
+/*-------------------PART 2-------------------*/
+.more-about h2{
+    font-size: 24px;
+    text-align: center;
+    margin: 36px 0 16px;
+}
+
+.small-showcase-botton{
+    cursor: pointer;
+    display: block;
+    padding: 20px 20px;
+    background-color: #0d3274;
+    color: white;
+    text-align: center;
+    transition: all 0.5s ease-out
+}
+
+.small-showcase-botton:hover{
+    background-color: black;
+}
