--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@ ul {
 
 h1, h2{
     text-transform: uppercase;
+    text-align: center;
 }
 
 body{
@@ -63,10 +64,16 @@ ul{
 }
 
 .nav-menu ul li a{
-    padding: 10px 5px;
+    padding: 16px 10px;
 }
 
+
 .nav-menu ul li a:hover{
+    background-color: #0d3274;
+    color: white;
+}
+
+.nav-menu ul li a::selection{
     background-color: #0d3274;
     color: white;
 }
@@ -84,6 +91,15 @@ ul{
     display: none;                      /* menu esta escondido, solo se vera cuando el width sea pequeño */
   }
 
+
+.main-container{
+    max-width: 1200px;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 4rem;
+    padding-right: 4rem;
+}
 
 /*--------------------------------------------*/
 /*------------------ABOUT US------------------*/
@@ -143,7 +159,6 @@ ul{
 /*-------------------PART 2-------------------*/
 .more-about h2{
     font-size: 24px;
-    text-align: center;
     margin: 36px 0 16px;
 }
 
@@ -165,19 +180,21 @@ ul{
     display: grid;
     grid-template-columns: 1fr 1fr;
     color: white;
-    margin: 20px;
+    margin-left: 6%;
     align-items: center;
 }
 
 .small-showcase-text div{
     margin-block: 10%;
     background-color: #0d3274;
-    z-index: 10;
+    /* z-index: 10; */
     padding: 24px;
 }
 
-.small-showcase-text img{
-    width: 100%;
+.small-showcase-text img{  
+    /* height:400px; */
+    width: 450px;
+    z-index: -1;
 }
 
 .small-showcase-text h2{
@@ -193,6 +210,27 @@ ul{
     list-style: square;
 }
 
+
+
+.benefits{
+    width: 100%;
+}
+
+.benefits div ul{
+    display: flex;
+    justify-content: center;
+}
+
+.benefits-enumerations{
+    display: flex;
+    flex-direction: column;
+}
+
+.benefits div ul li{
+    text-align: center;
+    float:left;
+    margin: 64px 3%;
+}
 
 
 
