--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,9 +92,9 @@ ul{
   }
 
 
-.main-container{
+.main-container, .three-rows{
+    align-items: flex-start;
     max-width: 1200px;
-    align-items: center;
     margin-left: auto;
     margin-right: auto;
     padding-left: 4rem;
@@ -269,7 +269,8 @@ ul{
     color: white;
     text-align: center;
     transition: all 0.5s ease-out;
-    font-size: 2vw;
+    font-size: 14px;
+    /* font-size: 1vw; */
 }
 .contact-botton:hover{
     background-color: black;
@@ -366,5 +367,12 @@ footer{
         font-size: 3vw;
     }
 
+    .three-rows{
+        grid-template-columns: 1fr;
+    }
 
+    .contact-botton{
+        font-size: 10px;
+        /* font-size: 1vw; */
+    }
 }
