--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,9 +11,13 @@ ul {
     padding-right: 0;
 } 
 
-h1, h2{
+h1, h2, h3{
     text-transform: uppercase;
     text-align: center;
+}
+
+h2{
+    margin: 2rem 0 8px 0;
 }
 
 body{
@@ -98,8 +102,8 @@ ul{
 }
 
 /*--------------------------------------------*/
-/*------------------ABOUT US------------------*/
-.about-us{
+/*-----------------BILLBOARD------------------*/
+.main_billboard{
     width: 100%;
     height: 480px;
     background-image: url('/assets/images/casa-o-departamento.jpg');
@@ -109,7 +113,7 @@ ul{
     padding-right: 50%;
 }
 
-.about-us h2{
+.main_billboard h2{
     font-size: 18px;
     /* text-transform: uppercase; */
     letter-spacing: 4px;
@@ -126,7 +130,7 @@ ul{
 .small-showcase{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 4%;
+    gap: 2%;
 }
 
 .small-showcase-img{
@@ -225,8 +229,32 @@ ul{
 .benefits div ul li{
     text-align: center;
     float:left;
-    margin: 64px 3%;
+    margin: 2rem 3%;
 }
+
+/*--------------------------------------------*/
+/*------------------ABOUT US------------------*/
+.members{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.members > div{
+    text-align: center;
+}
+
+.members img{
+    border: #333 solid 1px;
+    border-radius: 100%;
+}
+
+.location-map iframe{
+    padding: 2rem 0;
+    width: 100%;
+    height: 300px;
+}
+
+
 
 
 /*--------------------------------------------*/
@@ -272,8 +300,6 @@ ul{
     background-color: black;
     transition: all 0.5s ease-out;
 }
-
-
 
 .icon-style{
     font-size: 2rem;
@@ -412,15 +438,7 @@ footer{
 
 @media screen and (max-width: 480px){
     .nav-menu ul.nav-items{
-        /* display: block;
-        position: fixed;
-        top: 0;
-        left: 0; 
-        background: #0d3274;*/
         width: 100%;
-        /* flex-direction: column;
-        text-align: center;
-        transition: transform 0.5s ease-in-out; */
         transform: translateX(480px); 
     }
 }
