--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -112,7 +112,7 @@ a {
 .main_billboard{
     width: 100%;
     height: 480px;
-    background-image: url('/assets/images/casa-o-departamento.jpg');
+    background-image: url('../../assets/images/casa-o-departamento.jpg');
     display: flex;
     align-items: center;
     padding-left: 6%;
